# arcadia

./: .gitignore  CMakeLists.txt
cmake/: FindGLFW3.cmake
resources/shaders/: default.frag
shaders/: core_vertex.glsl
source/: Shader.h  main.cpp
source/core/: Core.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
source/core/maths/: Vector2.cpp  Vector3.cpp  Vector3.h  Vector4.cpp
source/engine/: Core.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  IGame.h  Input.cpp  Input.h  KeyCode.h  ResourceManager.cpp  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
source/engine/Component/: Core.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
source/engine/Component/Camera/: Camera2D.cpp  Camera2D.h
source/engine/Core/: AbstractGameBase.h  Core.h  GameObject.cpp  GameObject.h
source/engine/Input/: Core.h  Input.cpp  Input.h
source/engine/Math/: Core.h  Vector2.h
source/engine/Util/: Core.h  Log.h  ResourceManager.cpp  ResourceManager.h  UUID.h
source/engine/camera/: Camera2D.cpp  Camera2D.h
source/engine/components/: AbstractComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
source/engine/maths/: Vector2.h  Vector3.h  Vector4.h
source/engine/utilities/: Log.cpp  Log.h
source/game/: Breakout.cpp  Breakout.h
source/lib/: glad.c
